fix overlap

--- a/capstone-showcase/src/CSS/WinnerComponent.css
+++ b/capstone-showcase/src/CSS/WinnerComponent.css
@@ -17,6 +17,7 @@
   grid-template-rows: 550px 150px 550px 150px 550px;
   width: 100%;
   /* height: 550px; */
+  margin-bottom: 4rem;
 }
 
 .text-container {
@@ -108,25 +109,25 @@
   position: absolute;
   left: 8%;
   top: 35%;
-  height: 250vh;
+  height: 225vh;
 }
 .line2 {
   position: absolute;
   left: 37%;
   top: 50%;
-  height: 220vh;
+  height: 210vh;
 }
 .line3 {
   position: absolute;
   left: 75.4%;
   top: 50%;
-  height: 220vh;
+  height: 210vh;
 }
 .line4 {
   position: absolute;
   left: 96.9%;
   top: 50%;
-  height: 220vh;
+  height: 210vh;
 }
 .line5 {
   position: absolute;
